@@ -1,4 +1,4 @@
-package uk.gov.hmcts.cmc.claimstore.services.ccd.callbacks.legalrep;
+package uk.gov.hmcts.cmc.claimstore.services.ccd.callbacks.caseworker;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -18,20 +18,23 @@ import uk.gov.hmcts.cmc.domain.models.Claim;
 import uk.gov.hmcts.reform.ccd.client.model.AboutToStartOrSubmitCallbackResponse;
 import uk.gov.hmcts.reform.ccd.client.model.CallbackResponse;
 
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 
-import static uk.gov.hmcts.cmc.ccd.domain.CaseEvent.CREATE_LEGAL_REP_CLAIM;
+import static uk.gov.hmcts.cmc.ccd.domain.CaseEvent.CREATE_CASE;
 import static uk.gov.hmcts.cmc.claimstore.constants.ResponseConstants.CREATE_CLAIM_DISABLED;
+import static uk.gov.hmcts.cmc.claimstore.services.ccd.Role.CASEWORKER;
+import static uk.gov.hmcts.cmc.claimstore.services.ccd.Role.CITIZEN;
+import static uk.gov.hmcts.cmc.claimstore.services.ccd.Role.JUDGE;
+import static uk.gov.hmcts.cmc.claimstore.services.ccd.Role.LEGAL_ADVISOR;
 import static uk.gov.hmcts.cmc.claimstore.services.ccd.Role.SOLICITOR;
 
 @Service
-public class CreateLegalRepClaimCallbackHandler extends CallbackHandler {
+public class CreateClaimCallbackHandler extends CallbackHandler {
 
-    private static final List<CaseEvent> EVENTS = Arrays.asList(CREATE_LEGAL_REP_CLAIM);
-    private static final List<Role> ROLES = Collections.singletonList(SOLICITOR);
+    private static final List<CaseEvent> EVENTS = Collections.singletonList(CREATE_CASE);
+    private static final List<Role> ROLES = List.of(CITIZEN, SOLICITOR, CASEWORKER, LEGAL_ADVISOR, JUDGE);
 
     private final Logger logger = LoggerFactory.getLogger(getClass());
     private final CaseDetailsConverter caseDetailsConverter;
@@ -39,7 +42,7 @@ public class CreateLegalRepClaimCallbackHandler extends CallbackHandler {
     private final boolean featureCreateClaimEnabled;
 
     @Autowired
-    public CreateLegalRepClaimCallbackHandler(
+    public CreateClaimCallbackHandler(
         CaseDetailsConverter caseDetailsConverter,
         CaseMapper caseMapper,
         @Value("${feature_toggles.create_claim_enabled:true}") boolean featureCreateClaimEnabled
@@ -51,7 +54,7 @@ public class CreateLegalRepClaimCallbackHandler extends CallbackHandler {
 
     @Override
     protected Map<CallbackType, Callback> callbacks() {
-        return Map.of(CallbackType.ABOUT_TO_SUBMIT, this::createLegalRepClaim);
+        return Map.of(CallbackType.ABOUT_TO_SUBMIT, this::createClaim);
     }
 
     @Override
@@ -65,14 +68,15 @@ public class CreateLegalRepClaimCallbackHandler extends CallbackHandler {
     }
 
     @LogExecutionTime
-    private CallbackResponse createLegalRepClaim(CallbackParams callbackParams) {
+    private CallbackResponse createClaim(CallbackParams callbackParams) {
         logger.info("Create claim feature is: {}", featureCreateClaimEnabled ? "enabled" : "disabled");
         if (!featureCreateClaimEnabled) {
             return AboutToStartOrSubmitCallbackResponse.builder()
-                .errors(List.of(CREATE_CLAIM_DISABLED)).build();
+                    .errors(List
+                            .of(CREATE_CLAIM_DISABLED)).build();
         }
         Claim claim = caseDetailsConverter.extractClaim(callbackParams.getRequest().getCaseDetails());
-        logger.info("Creating legal rep case for callback of type {}, claim with external id {}",
+        logger.info("Creating case for callback of type {}, claim with external id {}",
             callbackParams.getType(),
             claim.getExternalId());
 
